--- a/pages/intro/index.html
+++ b/pages/intro/index.html
@@ -220,7 +220,7 @@
                                 <div class="fr nav">
                                     <ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="/">首页</a>
+                                            <a class="navNameLink" href="/mobile-h5">首页</a>
 
                                         </li>
                                         <li class="dropdown">
@@ -232,7 +232,7 @@
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="/intro/2.html">联系我们</a>
+                                            <a class="navNameLink" href="../contact">联系我们</a>
 
                                         </li>
                                     </ul>
@@ -266,7 +266,7 @@
                                 </li>
 
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="/intro/2.html">联系我们</a>
+                                    <a class="navNameLink" href="../contact">联系我们</a>
 
                                 </li>
 
@@ -330,7 +330,7 @@
                                          class="c_portalResBreadcrumb_nav-01001"> <!--homePage  首页-->
                                         <div class="e_box e_box-000 p_breadcrumbList" data-ename="面包屑导航">
                                             <div class="e_breadcrumb e_breadcrumb-001 p_breadcrumbFirst">
-                                                <a href="/">
+                                                <a href="/mobile-h5">
                                                     <div class="font">
                                                         <span><span class="i_homePage">首页</span></span>
                                                     </div>
