--- a/pages/product/index.html
+++ b/pages/product/index.html
@@ -14,7 +14,7 @@
 
     <link href="../../css/page_impt_case.css" rel="stylesheet" type="text/css"/>
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon"/>
-
+    <link href="../../css/footer_contact.css" rel="stylesheet" type="text/css"/>
 
     <meta name='viewport' content='width=1440'/>
     <meta http-equiv="Cache-Control" content="no-transform"/>
@@ -1052,17 +1052,17 @@
                                                     style="line-height:2">公司名称：北京网站建设有限公司</span></span></span></strong>
                                             </p>
 
-                                            <p><span style="color:#A9A9A9"><span style="line-height:2"><span
+                                            <p class="pull-left"><span style="color:#A9A9A9"><span style="line-height:2"><span
                                                     style="font-size:14px">地址：北京市亦庄经济开发区数码庄园</span></span>
                                                     </span>
                                             </p>
 
-                                            <p><span style="color:#A9A9A9"><span style="line-height:2"><span
+                                            <p class="pull-left"><span style="color:#A9A9A9"><span style="line-height:2"><span
                                                     style="font-size:14px">电话：010-87120000</span></span>
                                                     </span>
                                             </p>
 
-                                            <p><span style="color:#A9A9A9"><span style="line-height:2"><span
+                                            <p class="pull-left"><span style="color:#A9A9A9"><span style="line-height:2"><span
                                                     style="font-size:14px">手机：18888888888</span></span>
                                                     </span>
                                             </p>
@@ -1072,7 +1072,7 @@
                                                     </span>
                                             </p>
 
-                                            <p><span style="color:#A9A9A9"><span style="line-height:2"><span
+                                            <p class="pull-left"><span style="color:#A9A9A9"><span style="line-height:2"><span
                                                     style="font-size:14px">客服热线：400-0000-0000</span></span>
                                                     </span>
                                             </p>
