--- a/pages/product/index.html
+++ b/pages/product/index.html
@@ -229,20 +229,20 @@
                                 <div class="fr nav">
                                     <ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="/">首页</a>
+                                            <a class="navNameLink" href="../../index.html">首页</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../intro/">公司简介</a>
+                                            <a class="navNameLink" href="../intro/index.html">公司简介</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="./">设计案例</a>
+                                            <a class="navNameLink" href="./index.html">设计案例</a>
 
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../contact/">联系我们</a>
+                                            <a class="navNameLink" href="../contact/index.html">联系我们</a>
 
                                         </li>
                                     </ul>
@@ -263,20 +263,20 @@
 
 
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="/">首页</a>
+                                    <a class="navNameLink" href="../../index.html">首页</a>
 
                                 </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../intro/">公司简介</a>
+                                    <a class="navNameLink" href="../intro/index.html">公司简介</a>
 
                                 </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="./">设计案例</a>
+                                    <a class="navNameLink" href="./index.html">设计案例</a>
 
                                 </li>
 
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../contact/">联系我们</a>
+                                    <a class="navNameLink" href="../contact/index.html">联系我们</a>
 
                                 </li>
 
