--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -221,20 +221,20 @@
                                 <div class="fr nav">
                                     <ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="/">首页</a>
+                                            <a class="navNameLink" href="../../index.html">首页</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../intro">公司简介</a>
+                                            <a class="navNameLink" href="../intro/index.html">公司简介</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../product">设计案例</a>
+                                            <a class="navNameLink" href="../product/index.html">设计案例</a>
 
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="./">联系我们</a>
+                                            <a class="navNameLink" href="./index.html">联系我们</a>
 
                                         </li>
                                     </ul>
@@ -255,23 +255,20 @@
 
 
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="/">首页</a>
+                                    <a class="navNameLink" href="../../index.html">首页</a>
 
                                 </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../intro">公司简介</a>
+                                    <a class="navNameLink" href="../intro/index.html">公司简介</a>
 
                                 </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../product">设计案例</a>
+                                    <a class="navNameLink" href="../product/index.html">设计案例</a>
 
                                 </li>
-                                <li class="dropdown">
-                                    <a class="navNameLink" href="./">新闻资讯</a>
 
-                                </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="/intro/2.html">联系我们</a>
+                                    <a class="navNameLink" href="./index.html">联系我们</a>
 
                                 </li>
 
