--- a/pages/intro/index.html
+++ b/pages/intro/index.html
@@ -220,19 +220,19 @@
                                 <div class="fr nav">
                                     <ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="/mobile-h5">首页</a>
+                                            <a class="navNameLink" href="../../index.html">首页</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="./">公司简介</a>
+                                            <a class="navNameLink" href="./index.html">公司简介</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../product">设计案例</a>
+                                            <a class="navNameLink" href="../product/index.html">设计案例</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../contact">联系我们</a>
+                                            <a class="navNameLink" href="../contact/index.html">联系我们</a>
 
                                         </li>
                                     </ul>
@@ -253,20 +253,20 @@
 
 
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="/">首页</a>
+                                    <a class="navNameLink" href="../../index.html">首页</a>
 
                                 </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="./">公司简介</a>
+                                    <a class="navNameLink" href="./index.html">公司简介</a>
 
                                 </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../product">设计案例</a>
+                                    <a class="navNameLink" href="../product/index.html">设计案例</a>
 
                                 </li>
 
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../contact">联系我们</a>
+                                    <a class="navNameLink" href="../contact/index.html">联系我们</a>
 
                                 </li>
 
@@ -400,7 +400,7 @@
                                                     <div class='reset_style js-reset_style js-adapMobile '>
                                                         <div>
                                                             <img alt="111" class="imageResponse js-onerror"
-                                                                 domain-src="/mobile-h5/repository/image/A461ZB0ERgqg6EIcvTZc6g.jpg"
+
                                                                  id="10"
                                                                  src="../../repository/image/A461ZB0ERgqg6EIcvTZc6g.jpg"
                                                                  style="float: right; margin-left: 30px; margin-right: 30px; width: 903px; height: 316px;">　　本公司拥有完整、科学的质量管理体系。我们的诚信、实力和产品质量获得业界的广泛认可。
